# traefik-domain-discovery

./: .gitignore  LICENSE  README.md  pyproject.toml  traefik-domain-discover
docs/: architecture.md  usage.md
examples/: config.example.yaml  discovered-hosts.example.yaml  selected-targets.example.yaml  zone-overrides.example.yaml
src/traefik_domain_discovery/: __init__.py  access_log.py  cli.py  dns_enrichment.py  docker_discovery.py  exporters.py  file_provider.py  models.py  traefik_api.py  traefik_rules.py  yaml_compat.py
